# playground

./: .gitignore  playground.code-workspace
.docs/: .gitignore
.docs/tex/: main.tex
.docs/uml/: adaptor.puml  builder.puml  dependency.puml  ecs.puml  factory.puml  oop.puml  strategy.puml  visitor.puml
c++-playground/: .gitignore  CMakeLists.txt
c++-playground/src/: main.cpp  main_strategy.cpp  quicksort.hpp
c++-playground/src/ecs/: ecs.cpp  ecs.hpp  oop_ecs.hpp
c++-playground/src/strategy/: strategy.hpp
go-playground/: .gitignore  README.md  go.mod  main.go  main_test.go  visitor.go  visitor_test.go
haskell-playground/: .gitignore  haskell-playground.cabal  package.yaml
haskell-playground/app/: Main.hs
haskell-playground/src/: Quicksort.hs  SimpleServer.hs
java-playground/: .gitignore  Makefile  README.md  README_RUN.md  mvnw  mvnw.cmd  pom.xml
java-playground/app/: pom.xml
java-playground/app/src/main/java/com/example/app/: Main.java
java-playground/app/src/main/java/com/example/app/dependency/: DependencyDemo.java
java-playground/app/src/test/java/com/example/app/dependency/: PhotoServiceTest.java
java-playground/libs/core/: pom.xml
java-playground/libs/core/src/main/java/com/example/core/: Utils.java
prolog-playground/: .gitignore  Makefile
prolog-playground/src/: main.pl  maze.pl  sudoku.pl  sudoku_helpers.pl  whodunnit.pl
rust-playground/: .gitignore  Cargo.toml
rust-playground/factory_builder/: Cargo.toml
rust-playground/factory_builder/src/: lib.rs
rust-playground/src/: lib.rs  main.rs
sql-playground/: .gitignore
(+17 files in other folders)
